industry xml created

--- a/android/app/src/main/res/layout/activity_industry.xml
+++ b/android/app/src/main/res/layout/activity_industry.xml
@@ -6,7 +6,7 @@
     android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.view.IndustryActivity">
+    tools:context=".view.industryView.IndustryActivity">
 
     <!-- TOP BANNER -->
     <LinearLayout
