--- a/android/app/src/main/res/layout/activity_industry_main.xml
+++ b/android/app/src/main/res/layout/activity_industry_main.xml
@@ -6,7 +6,7 @@
     android:background="#EFEEF5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.view.IndustryMainActivity">
+    tools:context=".view.industryView.IndustryMainActivity">
 
 
     <!-- NAV HOST FRAGMENT: BottomNavigationView yukarıda kalacak -->
