--- a/android/app/src/main/res/layout/item_admin_card.xml
+++ b/android/app/src/main/res/layout/item_admin_card.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="12dp"
+    android:layout_margin="10dp"
+    android:layout_marginHorizontal="10dp"
     app:cardBackgroundColor="#FFFFFF"
     app:cardCornerRadius="16dp"
     app:cardElevation="4dp">
@@ -19,28 +20,27 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/requestTitle"
+                android:id="@+id/adminRequestTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Talep Başlığı"
                 android:textColor="#000000"
-                android:textSize="18sp"
+                android:textSize="17sp"
                 android:textStyle="bold" />
 
             <ImageView
-                android:id="@+id/deleteIcon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:id="@+id/detailIcon"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
                 android:layout_alignParentEnd="true"
-                android:background="@drawable/bg_delete_shadow"
                 android:padding="5dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/baseline_delete_24" />
+                android:src="@drawable/baseline_arrow_forward_ios_24" />
 
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/requestMessage"
+            android:id="@+id/adminRequestMessage"
             android:layout_width="330dp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="4dp"
@@ -48,7 +48,7 @@
             android:ellipsize="end"
             android:text="Talep açıklaması buraya gelecek..."
             android:textColor="#666666"
-            android:textSize="15sp" />
+            android:textSize="14sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -66,7 +66,7 @@
                 android:tint="#888888" />
 
             <TextView
-                android:id="@+id/requestDate"
+                android:id="@+id/adminRequestDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="22.07.2025"
@@ -83,7 +83,7 @@
             android:scrollbars="none">
 
             <LinearLayout
-                android:id="@+id/categoryContainer"
+                android:id="@+id/adminCategoryContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -92,4 +92,3 @@
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
-
