--- a/android/app/src/main/res/layout/activity_request_content.xml
+++ b/android/app/src/main/res/layout/activity_request_content.xml
@@ -65,18 +65,6 @@
             android:paddingTop="16dp"
             android:paddingBottom="32dp">
 
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView">
-
                 <!--Talep konusu-->
                 <TextView
                     android:layout_width="300dp"
@@ -139,7 +127,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="169dp"
                     android:hint="Talep konusu"
-                    android:text="Lütfen talep mesajınızda projeniz / fikriniz hakkında detaylı bilgi veriniz"
+                    android:text="Lütfen talep mesajınızda projeniz / fikriniz hakkında detaylı bilgi veriniz."
                     android:textColor="#8A8585"
                     android:textSize="12sp"
                     android:textStyle="bold"
@@ -163,15 +151,14 @@
                     android:textStyle="normal" />
 
                 <Button
-                    android:id="@+id/create"
+                    android:id="@+id/btnCreateRequest"
                     android:layout_width="360dp"
                     android:layout_height="53dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="150dp"
+                    android:layout_marginTop="7dp"
+                    android:layout_marginBottom="400dp"
                     android:backgroundTint="#1A9AAF"
                     android:elevation="8dp"
-                    android:fontFamily="monospace"
                     android:onClick="createRequest"
                     android:text="Oluştur"
                     android:textColor="#FFFFFF"
@@ -187,6 +174,6 @@
 
 
             </LinearLayout>
-        </LinearLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
