--- a/android/app/src/main/res/layout/activity_request_detail.xml
+++ b/android/app/src/main/res/layout/activity_request_detail.xml
@@ -15,7 +15,7 @@
         android:layout_height="70dp"
         app:cardBackgroundColor="#1A9AAF"
         app:cardCornerRadius="0dp"
-        app:cardElevation="8dp"
+        app:cardElevation="7dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,8 +47,7 @@
             android:textStyle="bold"/>
     </com.google.android.material.card.MaterialCardView>
 
-
-    <!-- İçerik Alanı -->
+    <!-- Scrollview -->
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -74,9 +73,9 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="12dp"
                 app:cardBackgroundColor="#FFFFFF"
-                app:cardCornerRadius="14dp"
+                app:cardCornerRadius="12dp"
                 app:cardElevation="2dp"
-                app:strokeColor="#DDDDDD"
+                app:strokeColor="#FFFFFF"
                 app:strokeWidth="1dp">
 
                 <LinearLayout
@@ -84,7 +83,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:padding="20dp">
+                    android:padding="15dp">
 
                     <!-- Başlık -->
                     <TextView
@@ -93,7 +92,7 @@
                         android:layout_marginBottom="12dp"
                         android:text="Talep Durumu"
                         android:textColor="#333333"
-                        android:textSize="18sp"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <!-- Açıklama -->
@@ -109,15 +108,15 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="5dp"
-                            android:src="@drawable/baseline_check_circle_outline_24" />
+                            android:src="@drawable/baseline_question_mark_24" />
 
                         <TextView
                             android:id="@+id/requestStatus"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Talep onaylandı"
+                            android:text="Talep Durumu"
                             android:textColor="#4BA222"
-                            android:textSize="15sp"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -133,10 +132,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginVertical="6dp"
+                        android:layout_marginVertical="12dp"
                         android:text="Mesaj:"
-                        android:textColor="#666666"
-                        android:textSize="15sp" />
+                        android:textColor="#000000"
+                        android:textStyle="bold"
+                        android:textSize="14sp" />
 
 
                     <View
@@ -148,14 +148,14 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
+                        android:layout_marginTop="15dp"
                         android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_gravity="center"
-                            android:layout_marginRight="15dp"
+                            android:layout_marginRight="17dp"
                             android:background="@drawable/rounded_img"
                             android:clipToOutline="true"
                             android:src="@drawable/logo" />
@@ -188,7 +188,6 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
-
 
                                 <TextView
                                     android:layout_width="match_parent"
@@ -237,9 +236,9 @@
                 android:layout_marginTop="7dp"
                 android:layout_marginBottom="24dp"
                 app:cardBackgroundColor="#FFFFFF"
-                app:cardCornerRadius="14dp"
+                app:cardCornerRadius="12dp"
                 app:cardElevation="2dp"
-                app:strokeColor="#DDDDDD"
+                app:strokeColor="#FFFFFF"
                 app:strokeWidth="1dp">
 
                 <LinearLayout
@@ -254,10 +253,10 @@
                         android:id="@+id/detailTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
-                        android:text="Talep Başlığı"
+                        android:layout_marginBottom="10dp"
+                        android:text=""
                         android:textColor="#333333"
-                        android:textSize="20sp"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <!-- Açıklama -->
@@ -265,19 +264,19 @@
                         android:id="@+id/detailMessage"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
-                        android:text="Talep açıklaması burada yer alacak."
+                        android:layout_marginBottom="10dp"
+                        android:text=""
                         android:textColor="#555555"
-                        android:textSize="15sp" />
+                        android:textSize="14sp" />
 
                     <!-- Tarih -->
                     <TextView
                         android:id="@+id/detailDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
-                        android:text="Tarih: 2025-07-28"
-                        android:textColor="#888888"
+                        android:layout_marginBottom="10dp"
+                        android:text=""
+                        android:textColor="#666666"
                         android:textSize="14sp" />
 
                     <!-- Kategori Başlığı -->
@@ -285,10 +284,10 @@
                         android:id="@+id/categoryLabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
+                        android:layout_marginBottom="5dp"
                         android:text="Kategoriler"
                         android:textColor="#333333"
-                        android:textSize="15sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
 
                     <!-- Kategoriler - Flexbox ile gösterim -->
@@ -296,7 +295,7 @@
                         android:id="@+id/detailCategoryContainer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
+                        android:layout_marginTop="2dp"
                         app:flexWrap="wrap"
                         app:justifyContent="flex_start"
                         android:orientation="horizontal"/>
